--- a/app/src/main/res/layout/activity_detail_joke.xml
+++ b/app/src/main/res/layout/activity_detail_joke.xml
@@ -42,7 +42,7 @@
 
         <ProgressBar
             android:id="@+id/progress_bar"
-            android:visibility="gone"
+            android:visibility="@{viewModel.isLoading}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
