--- a/app/src/main/res/layout/activity_search_joke.xml
+++ b/app/src/main/res/layout/activity_search_joke.xml
@@ -67,6 +67,41 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_not_found"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/zero_dp"
+            android:background="@color/white"
+            app:layout_constraintTop_toBottomOf="@+id/search_layout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <ImageView
+                android:id="@+id/iv_not_found"
+                android:src="@drawable/ic_not_found"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_xl"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <TextView
+                android:id="@+id/tv_not_found"
+                android:text="@string/label_data_not_found"
+                android:textAlignment="center"
+                android:layout_width="@dimen/zero_dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_l"
+                style="@style/TextAppearance.AppCompat.Medium"
+                app:layout_constraintTop_toBottomOf="@+id/iv_not_found"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
         <ProgressBar
             android:id="@+id/progress_bar"
             android:visibility="@{viewModel.isLoading}"
